--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -1,1 +1,34 @@
-name: Docker
+name: Docker build and push workflow
+
+on: workflow_dispatch
+
+jobs:
+    push-to-registry:
+        runs-on: ubuntu-latest
+
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v3
+
+            - name: Login to Docker Hub
+              uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+              with:
+                username: ${{ secrets.DOCKER_USERNAME }}
+                password: ${{ secrets.DOCKER_PASSWORD }}
+
+            - name: Get tag and label for Docker
+              id  : metadata
+              uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38  
+              with: 
+                images: terezabisharyan/simple-cpp-app
+
+            - name: Build image and push on Docker Hub
+              uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc   
+              with:
+                context: .
+                push: true
+                tags: ${{ steps.meta.outputs.tags }}
+                labels: ${{ steps.meta.outputs.labels }}
+
+
+
