--- a/.github/workflows/docker-hub.yml
+++ b/.github/workflows/docker-hub.yml
@@ -28,4 +28,6 @@ jobs:
                 context: .
                 push: true
                 tags: ${{ steps.metadata.outputs.tags }}
-                
+              
+            - name: Print tag of image
+              run : echo "${{ steps.metadata.outputs.tags }}"    
